--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -45,24 +45,14 @@ jobs:
             - name: Get previous version from git history
               id: previous-version
               run: |
-                  if [ "${{ github.event_name }}" = "pull_request" ]; then
-                    # For pull requests, compare against the base branch (usually main)
-                    BASE_BRANCH="${{ github.base_ref }}"
-                    echo "Pull request detected, comparing against base branch: $BASE_BRANCH"
-                    
-                    # Get the version from the base branch
-                    PREVIOUS_VERSION=$(git show origin/$BASE_BRANCH:package.json | node -p "JSON.parse(require('fs').readFileSync(0, 'utf8')).version" 2>/dev/null || echo "0.0.0")
-                  else
-                    # For push events, get the previous version from the last commit that changed package.json
-                    PREVIOUS_COMMIT=$(git log --format="%H" --follow -- package.json | head -2 | tail -1)
-                    if [ -n "$PREVIOUS_COMMIT" ]; then
-                      PREVIOUS_VERSION=$(git show $PREVIOUS_COMMIT:package.json | node -p "JSON.parse(require('fs').readFileSync(0, 'utf8')).version")
-                    else
-                      PREVIOUS_VERSION="0.0.0"
-                    fi
-                  fi
+                  # Always compare against the main branch for both push and pull_request events
+                  BASE_BRANCH="main"
+                  echo "Comparing against base branch: $BASE_BRANCH"
+
+                  # Get the version from the main branch
+                  PREVIOUS_VERSION=$(git show origin/$BASE_BRANCH:package.json | node -p "JSON.parse(require('fs').readFileSync(0, 'utf8')).version" 2>/dev/null || echo "0.0.0")
                   echo "previous-version=$PREVIOUS_VERSION" >> $GITHUB_OUTPUT
-                  echo "Previous version: $PREVIOUS_VERSION"
+                  echo "Previous version from $BASE_BRANCH: $PREVIOUS_VERSION"
 
             - name: Check if version has changed
               id: version-changed
@@ -75,7 +65,7 @@ jobs:
                     echo "Version has not changed (${{ steps.current-version.outputs.current-version }})"
                   fi
 
-    # --- Fail PR builds when version hasn't changed ---
+    # --- Fail PR builds when version hasn't changed (unless manually triggered) ---
     pr-version-check:
         needs: check-version
         if: github.event_name == 'pull_request' && needs.check-version.outputs.isVersionChanged == 'false'
