--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
 	"name": "homebrew-supercet",
 	"type": "module",
-	"version": "0.6.0",
+	"version": "0.6.1",
 	"scripts": {
 		"dev": "tsx watch src/index.ts",
-		"build": "esbuild src/index.ts --bundle --platform=node --format=cjs --target=node22 --outfile=dist/supercet.js --external:node-pty --external:*.node --minify --banner:js='if(typeof __filename===\"undefined\"){var __filename=process.execPath;var __dirname=require(\"path\").dirname(__filename);}' --define:process.env.SUPERCET_VERSION='\"'$(node -p 'require(\"./package.json\").version')'\"' --define:process.env.SUPERCET_URL='\"'$(grep SUPERCET_URL .env 2>/dev/null | cut -d '=' -f2 || echo 'https://supercet.com')'\"' --define:process.env.DEBUG='\"'$(grep DEBUG .env 2>/dev/null | cut -d '=' -f2  || echo 'false')'\"'",
+		"build": "esbuild src/index.ts --bundle --platform=node --format=cjs --target=node22 --outfile=dist/supercet.js --external:node-pty --external:*.node --minify  --define:process.env.SUPERCET_VERSION='\"'$(node -p 'require(\"./package.json\").version')'\"' --define:process.env.SUPERCET_URL='\"'$(grep SUPERCET_URL .env 2>/dev/null | cut -d '=' -f2 || echo 'https://supercet.com')'\"' --define:process.env.DEBUG='\"'$(grep DEBUG .env 2>/dev/null | cut -d '=' -f2  || echo 'false')'\"'",
 		"bundle:arm64": "pkg dist/supercet.js --compress GZip --targets node22-macos-arm64 --output dist/bundle/supercet-arm64",
 		"bundle:x64": "pkg dist/supercet.js --compress GZip --targets node22-macos-x64 --output dist/bundle/supercet-x64",
 		"start": "node dist/supercet.js",
@@ -27,23 +27,22 @@
 		"scripts": "dist/supercet.js"
 	},
 	"dependencies": {
-		"@anthropic-ai/claude-agent-sdk": "^0.2.21",
-		"@hono/node-server": "^1.18.1",
-		"dotenv": "^17.2.1",
-		"hono": "^4.8.12",
-		"jsonwebtoken": "^9.0.2",
-		"node-pty": "^1.0.0",
-		"patch-package": "^8.0.0",
-		"prettier": "^3.6.2",
-		"simple-git": "^3.28.0",
-		"socket.io": "^4.8.1"
+		"@anthropic-ai/claude-agent-sdk": "^0.2.22",
+		"@hono/node-server": "^1.19.9",
+		"dotenv": "^17.2.3",
+		"hono": "^4.11.7",
+		"jsonwebtoken": "^9.0.3",
+		"node-pty": "^1.1.0",
+		"patch-package": "^8.0.1",
+		"prettier": "^3.8.1",
+		"simple-git": "^3.30.0",
+		"socket.io": "^4.8.3"
 	},
 	"devDependencies": {
-		"@types/node": "^20.19.10",
-		"@yao-pkg/pkg": "^6.6.0",
-		"esbuild": "^0.25.8",
-		"tsx": "^4.7.1",
-		"typescript": "^5.8.3"
-	},
-	"packageManager": "pnpm@10.14.0+sha512.ad27a79641b49c3e481a16a805baa71817a04bbe06a38d17e60e2eaee83f6a146c6a688125f5792e48dd5ba30e7da52a5cda4c3992b9ccf333f9ce223af84748"
+		"@types/node": "^25.1.0",
+		"@yao-pkg/pkg": "^6.12.0",
+		"esbuild": "^0.27.2",
+		"tsx": "^4.21.0",
+		"typescript": "^5.9.3"
+	}
 }
