--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -91,7 +91,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                arch: [arm64, x64]
+                arch: [arm64]
 
         steps:
             - name: Checkout code
