--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
 	"name": "homebrew-supercet",
 	"type": "module",
-	"version": "0.6.8",
+	"version": "0.6.9",
 	"scripts": {
 		"dev": "tsx watch src/index.ts",
-		"build": "esbuild src/index.ts --bundle --platform=node --format=cjs --target=node22 --outfile=dist/supercet.js --external:node-pty --external:*.node --minify  --define:process.env.SUPERCET_VERSION='\"'$(node -p 'require(\"./package.json\").version')'\"' --define:process.env.SUPERCET_URL='\"'$(grep SUPERCET_URL .env 2>/dev/null | cut -d '=' -f2 || echo 'https://supercet.com')'\"' --define:process.env.DEBUG='\"'$(grep DEBUG .env 2>/dev/null | cut -d '=' -f2  || echo 'false')'\"'",
+		"build": "esbuild src/index.ts --bundle --platform=node --format=cjs --outfile=dist/supercet.js --external:node-pty --external:*.node --minify  --define:process.env.SUPERCET_VERSION='\"'$(node -p 'require(\"./package.json\").version')'\"' --define:process.env.SUPERCET_URL='\"'$(grep SUPERCET_URL .env 2>/dev/null | cut -d '=' -f2 || echo 'https://supercet.com')'\"' --define:process.env.DEBUG='\"'$(grep DEBUG .env 2>/dev/null | cut -d '=' -f2  || echo 'false')'\"'",
 		"bundle:arm64": "pkg dist/supercet.js --compress GZip --targets node22-macos-arm64 --output dist/bundle/supercet-arm64",
 		"bundle:x64": "pkg dist/supercet.js --compress GZip --targets node22-macos-x64 --output dist/bundle/supercet-x64",
 		"start": "node dist/supercet.js",
@@ -19,8 +19,10 @@
 	},
 	"pkg": {
 		"assets": [
-			"node_modules/node-pty/build/**/*",
-			"node_modules/node-pty/prebuilds/**/*"
+			"node_modules/**/node-pty/build/Release/pty.node",
+			"node_modules/**/node-pty/build/Debug/pty.node",
+			"node_modules/**/node-pty/build/Release/spawn-helper",
+			"node_modules/**/node-pty/build/Debug/spawn-helper"
 		],
 		"scripts": "dist/supercet.js"
 	},
