--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "homebrew-supercet",
 	"type": "module",
-	"version": "0.6.12",
+	"version": "0.6.13",
 	"scripts": {
 		"dev": "tsx watch src/index.ts",
 		"build": "esbuild src/index.ts --bundle --platform=node --format=cjs --outfile=dist/supercet.js --external:node-pty --external:*.node --minify  --define:process.env.SUPERCET_VERSION='\"'$(node -p 'require(\"./package.json\").version')'\"' --define:process.env.SUPERCET_URL='\"'$(grep SUPERCET_URL .env 2>/dev/null | cut -d '=' -f2 || echo 'https://supercet.com')'\"' --define:process.env.DEBUG='\"'$(grep DEBUG .env 2>/dev/null | cut -d '=' -f2  || echo 'false')'\"'",
@@ -11,8 +11,7 @@
 		"local": "npm run build && npm run bundle:arm64",
 		"tap:update": "ruby scripts/update-formula.rb",
 		"tap:test": "brew install --build-from-source ./Formula/supercet.rb",
-		"tap:uninstall": "brew uninstall supercet",
-		"postinstall": "patch-package"
+		"tap:uninstall": "brew uninstall supercet"
 	},
 	"bin": {
 		"supercet": "dist/supercet.js"
@@ -37,7 +36,6 @@
 		"hono": "^4.11.7",
 		"jsonwebtoken": "^9.0.3",
 		"node-pty": "^1.1.0",
-		"patch-package": "^8.0.1",
 		"prettier": "^3.8.1",
 		"simple-git": "^3.30.0",
 		"socket.io": "^4.8.3"
