--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "homebrew-supercet",
 	"type": "module",
-	"version": "0.6.13",
+	"version": "0.7.0",
 	"scripts": {
 		"dev": "tsx watch src/index.ts",
 		"build": "esbuild src/index.ts --bundle --platform=node --format=cjs --outfile=dist/supercet.js --external:node-pty --external:*.node --minify  --define:process.env.SUPERCET_VERSION='\"'$(node -p 'require(\"./package.json\").version')'\"' --define:process.env.SUPERCET_URL='\"'$(grep SUPERCET_URL .env 2>/dev/null | cut -d '=' -f2 || echo 'https://supercet.com')'\"' --define:process.env.DEBUG='\"'$(grep DEBUG .env 2>/dev/null | cut -d '=' -f2  || echo 'false')'\"'",
@@ -46,5 +46,6 @@
 		"esbuild": "^0.27.2",
 		"tsx": "^4.21.0",
 		"typescript": "^5.9.3"
-	}
+	},
+	"packageManager": "pnpm@10.14.0+sha512.ad27a79641b49c3e481a16a805baa71817a04bbe06a38d17e60e2eaee83f6a146c6a688125f5792e48dd5ba30e7da52a5cda4c3992b9ccf333f9ce223af84748"
 }
