--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -14,6 +14,7 @@ on:
         paths:
             - 'src/**'
             - 'package.json'
+            - 'Formula/**'
             - 'patches/**'
             - 'scripts/**'
             - '.github/workflows/**'
@@ -73,7 +74,7 @@ jobs:
     # --- Fail PR builds when version hasn't changed (unless manually triggered) ---
     pr-version-check:
         needs: check-version
-        if: github.event_name == 'pull_request' && needs.check-version.outputs.isVersionChanged == 'false'
+        if: github.event_name == 'pull_request' && needs.check-version.outputs.isVersionChanged == 'false' && !startsWith(github.head_ref, 'automation/update-formula-v')
         runs-on: ubuntu-latest
         steps:
             - name: Fail - Version not changed
@@ -158,6 +159,7 @@ jobs:
         needs: [check-version, build]
         permissions:
             contents: write
+            pull-requests: write
         runs-on: ubuntu-latest
         if: github.event_name == 'push' && needs.check-version.outputs.isVersionChanged == 'true'
         steps:
@@ -201,10 +203,14 @@ jobs:
               run: |
                   ./scripts/update-formula.rb
 
-            - name: Commit and push formula updates
-              run: |
-                  git config --local user.email "action@github.com"
-                  git config --local user.name "GitHub Action"
-                  git add Formula/supercet.rb
-                  git commit -m "Update formula for version ${{ steps.version.outputs.version }}"
-                  git push
+            - name: Create PR for formula updates
+              uses: peter-evans/create-pull-request@v7
+              with:
+                  commit-message: Update formula for version ${{ steps.version.outputs.version }}
+                  branch: automation/update-formula-v${{ steps.version.outputs.version }}
+                  delete-branch: true
+                  title: Update formula for version ${{ steps.version.outputs.version }}
+                  body: |
+                      Automated Homebrew formula update after release `v${{ steps.version.outputs.version }}`.
+                  add-paths: |
+                      Formula/supercet.rb
